--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,8 @@
 root = true
-# extension for eight programming languages: 
-# - Assembly, C, C++, C#, JavaScript, PHP, Python, SQL
-[*.{asm,c,cs,cpp,cxx,h,hpp,hxx,js,php,py,sql,ts,}]
-# all options in alphabetical order
+[*.{asm,c,cs,css,cpp,cxx,h,hpp,html,hxx,js,php,py,sql,ts}]
 charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-# end of file
