cmake project version and languages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14...3.28)
 
-project(project_)
+project(project_ VERSION 0.0.0 LANGUAGES CXX)
 
 add_subdirectory(source)
