--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,4 +2,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+if (TARGET ${SON8PROJ})
 target_sources(${SON8PROJ})
+endif()
