--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 root = true
-[*.{cxx,hxx,ixx,txt}]
+[*.{txt,mxx,ixx,cxx,hxx,cpp,hpp,cc,hh,c,h}] # CMake(txt) and C++20,C++17,C++14/11,C++98,C(implementation,inferface) files
 charset = utf-8
 end_of_line = lf
 indent_size = 4
