--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 root = true
-[*.{txt,mxx,ixx,cxx,hxx,cpp,hpp,cc,hh,c,h}]
+[*.{md,txt,mxx,ixx,cxx,hxx,cpp,hpp,cc,hh,c,h}]
 charset = utf-8
 end_of_line = lf
 indent_size = 4
