--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,4 +5,4 @@ set( CMAKE_CXX_EXTENSIONS OFF )
 # add_library( ${SON8PROJ} ) | add_executable( ${SON8PROJ} )
 # target_sources( ${SON8PROJ )
 
-message( FATAL_ERROR "${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE}\n change project name and remove this line" )
+message( FATAL_ERROR "${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE}\n change PROJECT_ name and remove this line" )
