msvc utf-8 and not permissive interface and implementation by default

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,7 +2,6 @@ set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF )
 
-# add_library( ${SON8PROJ} ) | add_executable( ${SON8PROJ} )
-# target_sources( ${SON8PROJ )
-
-message( FATAL_ERROR "${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE}\n change PROJECT_ name and remove this line" )
+add_library( ${SON8PROJ} )
+target_sources( ${SON8PROJ} PRIVATE )
+target_compile_options( ${SON8PROJ} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/permissive- /utf-8> )
